<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/text_view_app_name"
            style="@style/TextView"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/light_gray_text_color"
            android:textSize="@dimen/text_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.147"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06" />

        <TextView
            android:id="@+id/text_view_score"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_out_of"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toEndOf="@+id/text_view_app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.583" />

        <TextView
            android:id="@+id/text_view_out_of"
            style="@style/TextView"
            android:layout_marginTop="28dp"
            android:text="@string/out_of_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.219"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_app_name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_question"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_margin="@dimen/card_margin"
            android:elevation="12dp"
            app:cardBackgroundColor="#1b213a"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_out_of"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/text_view_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_true"
            style="@style/button"
            android:text="@string/btn_true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_question" />

        <Button
            android:id="@+id/btn_false"
            style="@style/button"
            android:text="@string/btn_false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_true" />

        <Button
            android:id="@+id/btn_next"
            style="@style/button"
            android:layout_width="wrap_content"
            android:text="@string/btn_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_false"
            app:layout_constraintVertical_bias="0.226" />

        <Button
            android:id="@+id/btn_prev"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_marginTop="138dp"
            android:text="@string/btn_prev"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_next"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintVertical_bias="0.226"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_false" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>